Initial commit of bookstore app

--- a/bookstore/pom.xml
+++ b/bookstore/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.5.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.bridgelabz.bookstore</groupId>
+	<groupId>com.bridgelabz</groupId>
 	<artifactId>bookstore</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bookstore</name>
