--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -1,1 +1,39 @@
 spring.application.name=bookstore
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Noddy2003
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Swagger UI Configuration
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+
+# Security Configuration (Basic setup - should be enhanced for production)
+spring.security.user.name=admin
+spring.security.user.password=admin
+
+# Server Configuration
+server.port=8080
+server.error.include-message=always
+
+# Logging Configuration
+logging.level.org.springframework=INFO
+logging.level.com.bridgelabz.bookstore=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=admin
